@@ -49,6 +49,7 @@ $sources = array(
 /* load modx and configs */
 require_once dirname(__FILE__) . '/build.config.php';
 include_once MODX_CORE_PATH . 'model/modx/modx.class.php';
+require_once dirname(__FILE__) . '/build.properties.php';
 $modx= new modX();
 $modx->initialize('mgr');
 $modx->loadClass('transport.modPackageBuilder','',false, true);
@@ -56,8 +57,22 @@ echo '<pre>'; /* used for nice formatting of log messages */
 $modx->setLogLevel(modX::LOG_LEVEL_INFO);
 $modx->setLogTarget('ECHO');
 
-$manager= $modx->getManager();
-$generator= $manager->getGenerator();
+foreach (array('mysql', 'sqlsrv') as $driver) {
+    $xpdo= new xPDO(
+        $properties["{$driver}_string_dsn_nodb"],
+        $properties["{$driver}_string_username"],
+        $properties["{$driver}_string_password"],
+        $properties["{$driver}_array_options"],
+        $properties["{$driver}_array_driverOptions"]
+    );
+    $xpdo->setPackage('modx', dirname(XPDO_CORE_PATH) . '/model/');
+    $xpdo->setDebug(true);
+
+    $manager= $xpdo->getManager();
+    $generator= $manager->getGenerator();
+
+    $manager= $xpdo->getManager();
+    $generator= $manager->getGenerator();
 
 $generator->classTemplate= <<<EOD
 <?php
@@ -154,8 +169,8 @@ $generator->mapHeader= <<<EOD
  * [+phpdoc-package+]
  */
 EOD;
-$generator->parseSchema($sources['model'] . 'schema/'.PKG_NAME_LOWER.'.mysql.schema.xml', $sources['model']);
-
+    $generator->parseSchema($sources['model'] . 'schema/'.PKG_NAME_LOWER.'.'.$driver.'.schema.xml', $sources['model']);
+}
 
 $mtime= microtime();
 $mtime= explode(" ", $mtime);
