@@ -39,7 +39,7 @@ set_time_limit(0);
 define('PKG_NAME','modActiveDirectory');
 define('PKG_NAME_LOWER','activedirectory');
 define('PKG_VERSION','1.0.0');
-define('PKG_RELEASE','rc2');
+define('PKG_RELEASE','pl');
 
 /* define sources */
 $root = dirname(dirname(__FILE__)).'/';
